damper with contracts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+<div class="page">
+  <main-header></main-header>
+
+  <div class="page__layout">
+    <router-outlet></router-outlet>
+  </div>
+</div>
