--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import "normalize.css";
+
+body {
+  overflow-x: auto;
+  overflow-y: scroll;
+}
