--- a/src/app/activities/damper-detailed-view/damper-detailed-view.component.html
+++ b/src/app/activities/damper-detailed-view/damper-detailed-view.component.html
@@ -21,7 +21,7 @@
                [formControl]="form.controls['expirationDate']">
       </div>
       <div class="form-actions">
-        <div class="form-button _save">Сохранить</div>
+        <div class="form-button _save" (click)="onUpdate()">Сохранить</div>
       </div>
     </form>
 
@@ -49,7 +49,7 @@
         </div>
       </div>
 
-      <accessory-form *ngIf="accessoryFormOpened"></accessory-form>
+      <accessory-form *ngIf="accessoryFormOpened" [damperUuid]="damperUuid"></accessory-form>
 
       <list [items]="getAccessories()" [headers]="accessoriesHeaders" [fields]="accessoriesFields"></list>
 
