--- a/src/app/components/main-header/main-header.component.html
+++ b/src/app/components/main-header/main-header.component.html
@@ -20,6 +20,10 @@
         </div>
       </div>
 
+      <div routerLink="calendar" class="main-header__dropdown">
+        Календарь
+      </div>
+
     </div>
   </div>
 </div>
